chore: sync latest changes

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,32 +1,30 @@
 services:
-  ollama:
-    volumes:
-      - ollama:/root/.ollama
-    container_name: ollama
-    pull_policy: always
-    tty: true
-    restart: unless-stopped
-    image: ollama/ollama:${OLLAMA_DOCKER_TAG-latest}
-
   open-webui:
     build:
       context: .
       dockerfile: Dockerfile
     image: ghcr.io/open-webui/open-webui:${WEBUI_DOCKER_TAG-main}
-    container_name: open-webui
+    container_name: open-webui-sebastian
     volumes:
       - open-webui:/app/backend/data
-    depends_on:
-      - ollama
     ports:
       - ${OPEN_WEBUI_PORT-3000}:8080
     environment:
-      - 'OLLAMA_BASE_URL=http://ollama:11434'
+      # Use existing Ollama container (via Docker network or host)
+      - 'OLLAMA_BASE_URL=${OLLAMA_BASE_URL-http://ollama:11434}'
       - 'WEBUI_SECRET_KEY='
+      - 'ENABLE_NOTES=false'
     extra_hosts:
       - host.docker.internal:host-gateway
+    networks:
+      - default
+      - ai-stack-network
     restart: unless-stopped
 
+networks:
+  ai-stack-network:
+    external: true
+    name: ai-stack-network
+
 volumes:
-  ollama: {}
   open-webui: {}
