Update calendar and tasks UI

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,11 @@ FORWARDED_ALLOW_IPS='*'
 SCARF_NO_ANALYTICS=true
 DO_NOT_TRACK=true
 ANONYMIZED_TELEMETRY=false
+
+# LangGraph Backend Configuration
+# Backend API URL - leave empty to auto-detect from browser hostname
+# Example: VITE_LANGGRAPH_BACKEND_URL=http://192.168.0.12:8000
+VITE_LANGGRAPH_BACKEND_URL=
+
+# LangGraph API Key - set this if your backend requires authentication
+VITE_LANGGRAPH_API_KEY=
